<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_open"
        android:title="@string/action_open" />
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share" />
    <item
        android:id="@+id/action_properties"
        android:title="@string/action_properties"
        android:icon="@drawable/ic_info" />
    <item
        android:id="@+id/action_remove_from_app"
        android:title="@string/action_remove_from_app" />
    <item
        android:id="@+id/action_delete_permanently"
        android:title="@string/action_delete_permanently"
        android:icon="@drawable/ic_delete"
        app:iconTint="?attr/colorError" />
</menu>
