<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomSection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.anscanner.app.ui.camera.DocumentOverlayView
        android:id="@+id/overlayView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomSection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height"
        android:background="#40000000"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/spacing_lg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnFlash"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cd_flash_toggle"
            android:src="@drawable/ic_flash_off"
            app:tint="@android:color/white" />

        <TextView
            android:id="@+id/tvFramingHint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/camera_framing_hint"
            android:textAppearance="@style/TextAppearance.AnScanner.Hint"
            android:textColor="@android:color/white" />

        <Space
            android:layout_width="48dp"
            android:layout_height="48dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_primary"
        android:orientation="vertical"
        android:paddingBottom="@dimen/spacing_xl"
        android:paddingTop="@dimen/spacing_md"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/spacing_lg">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/recent_scans"
                android:textAppearance="@style/TextAppearance.AnScanner.Label"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tvSeeAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:text="@string/see_all"
                android:textAppearance="@style/TextAppearance.AnScanner.Label"
                android:textColor="@color/accent_mint" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRecentScans"
            android:layout_width="match_parent"
            android:layout_height="@dimen/thumbnail_recent"
            android:layout_marginTop="@dimen/spacing_sm"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/spacing_md"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_recent_scan" />

        <ImageButton
            android:id="@+id/btnScan"
            android:layout_width="@dimen/shutter_button_size"
            android:layout_height="@dimen/shutter_button_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_lg"
            android:background="@drawable/bg_shutter_button"
            android:contentDescription="@string/cd_scan_button"
            android:src="@drawable/ic_camera"
            app:tint="@android:color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
